2004-02-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/fpu/fclrexcpt.c (__feclearexcept): Don't touch bits
	other than the status bits [BZ #10].

2004-02-08  Ulrich Drepper  <drepper@redhat.com>

	Make stream locking operations really work.
	* misc/Makefile (CFLAGS-mntent_r.c): Define.
	* shadow/Makefile (CFLAGS-fgetspent_r.c): Define.
	(CFLAGS-putspent.c): Define.
	* grp/Makefile (CFLAGS-fgetgrent_r.c): Define.
	(CFLAGS-putgrent.c): Define.
	* pwd/Makefile (CFLAGS-fgetpwent_r.c): Define.
	Reported by Shunichi Sagawa <s-sagawa@jp.fujitsu.com>.

	* elf/dl-load.c (lose): Use noinline attribute instead of silly
	alloca to prevent inlining.
	* elf/dl-runtime.c (fixup): Likewise.
	(profile_fixup): Likewise.

	* stdio-common/printf_size.c: Undo parts of patch from 2000-2-11.
	Initialize width correctly.

2004-02-07  Andreas Jaeger  <aj@suse.de>

	* iconv/gconv_simple.c (ucs4le_internal_loop): Remove cast used as
	lvalue.
	(internal_ucs4le_loop_single): Likewise.
	(ucs4_internal_loop): Likewise.
	(BODY): Likewise.
	(internal_ucs4_loop_single): Likewise.
	* iconvdata/iso8859-1.c (BODY): Likewise.
	* iconvdata/cp1255.c (EMIT_SHIFT_TO_INIT): Likewise.
	* iconvdata/cp1258.c (EMIT_SHIFT_TO_INIT): Likewise.
	* iconvdata/gb18030.c (BODY): Likewise.
	* iconvdata/armscii-8.c (BODY): Likewise.
	* stdlib/msort.c (msort_with_tmp): Likewise.

	* iconv/gconv_open.c (__gconv_open): Remove conditional expression
	as lvalue.

2004-02-06  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c: Declare __cache_line_size as
	weak extern.
	(__elf_machine_runtime_setup): Invalidate the instruction cache over
	the whole range of the PLT.

2004-02-06  Andreas Schwab  <schwab@suse.de>

	* posix/regcomp.c (build_range_exp): Fix off-by-one.
	(parse_bracket_exp): Likewise.

2004-02-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/kernel_stat.h: Define
	_HAVE_STAT_NSEC and _HAVE_STAT64_NSEC.  Patch by Anton Blanchard.
