@@ -1,4 +1,4 @@
-/* Copyright (C) 2000 Free Software Foundation, Inc.
+/* Copyright (C) 2000, 2004 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@gnu.org>, 2000.
 
@@ -17,18 +17,49 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
    02111-1307 USA.  */
 
+#include <wchar.h>
+#include <wctype.h>
+
 #include "../locale/outdigits.h"
 #include "../locale/outdigitswc.h"
 
 static CHAR_T *
 _i18n_number_rewrite (CHAR_T *w, CHAR_T *rear_ptr)
 {
-  CHAR_T *src, *s;
+#ifdef COMPILE_WPRINTF
+  wint_t wdecimal = L'\0';
+  wint_t wthousands = L'\0';
+# define decimal NULL
+# define thousands NULL
+#else
+# define wdecimal L'\0'
+# define wthousands L'\0'
+  char decimal[MB_LEN_MAX];
+  char thousands[MB_LEN_MAX];
+#endif
+
+  /* "to_outpunct" is a map from ASCII decimal point and thousands-sep
+     to their equivalent in locale. This is defined for locales which
+     use extra decimal point and thousands-sep.  */
+  wctrans_t map = __wctrans ("to_outpunct");
+  if (map != NULL)
+    {
+      mbstate_t state;
+      memset (&state, '\0', sizeof (state));
+
+      if (__wcrtomb (decimal, wdecimal, &state) == (size_t) -1)
+	memcpy (decimal, ".", 2);
+
+      memset (&state, '\0', sizeof (state));
+
+      if (__wcrtomb (thousands, wthousands, &state) == (size_t) -1)
+	memcpy (thousands, ",", 2);
+    }
 
   /* Copy existing string so that nothing gets overwritten.  */
-  src = (CHAR_T *) alloca ((rear_ptr - w) * sizeof (CHAR_T));
-  s = (CHAR_T *) __mempcpy (src, w,
-			    (rear_ptr - w) * sizeof (CHAR_T));
+  CHAR_T *src = (CHAR_T *) alloca ((rear_ptr - w) * sizeof (CHAR_T));
+  CHAR_T *s = (CHAR_T *) __mempcpy (src, w,
+				    (rear_ptr - w) * sizeof (CHAR_T));
   w = rear_ptr;
 
   /* Process all characters in the string.  */
@@ -41,8 +72,22 @@ _i18n_number_rewrite (CHAR_T *w, CHAR_T *rear_ptr)
 	  else
 	    *--w = (CHAR_T) outdigitwc_value (*s - '0');
 	}
-      else
+      else if (__builtin_expect (map == NULL, 1) || (*s != '.' && *s != ','))
 	*--w = *s;
+      else
+	{
+	  if (sizeof (CHAR_T) == 1)
+	    {
+	      const char *outpunct = *s == '.' ? decimal : thousands;
+	      size_t dlen = strlen (outpunct);
+
+	      w -= dlen;
+	      while (dlen-- > 0)
+		w[dlen] = outpunct[dlen];
+	    }
+	  else
+	    *--w = *s == '.' ? (CHAR_T) wdecimal : (CHAR_T) wthousands;
+	}
     }
 
   return w;
